--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div>
+        <i class="icon svg-header svg-location svg-location-dim"></i>
+        <select name="" id="">
+            <option value="male">SHOP BY CATEGORY</option>
+            <option value="female">Female</option>
+        </select>
+    </div>
 </body>
 </html>
+<script src="scripts/index.js"></script>
