--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 <body>
     <div>
-        <i class="icon svg-header svg-location svg-location-dim"></i>
+        <i class="icon svg-header svg-location svg-location-dim"></i> 
+    </div>
+    <div id="container1">
+        <img src="https://www.bbassets.com/static/staticContent/bb_logo.png" alt="" id="img_2">
+        <div id="container_1">
+            <input type="text" placeholder="Search for Products.." id="input">
+            <img src="http://assets.stickpng.com/thumbs/585e4ad1cb11b227491c3391.png" alt="" id="img_1">
+        </div>
+        <div id="container2">
+            <img src="https://cdn11.bigcommerce.com/s-e57be/product_images/uploaded_images/basket.png" alt="">
+            <div id="container3">
+                <p>My Basket</p>
+                <p>0 items</p>
+            </div>
+        </div>
+    </div>
+    <div id="container_2">
         <select name="" id="">
             <option value="male">SHOP BY CATEGORY</option>
             <option value="female">Female</option>
