--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://www.bbassets.com/static/staticContent/bb_logo.png" alt="" id="img_2">
         <div id="container_1">
             <input type="text" placeholder="Search for Products.." id="input">
-            <img src="http://assets.stickpng.com/thumbs/585e4ad1cb11b227491c3391.png" alt="" id="img_1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdz-IV8A7_gvH3FnGN9AZP9cu50QSiYFgU-A&usqp=CAU" alt="" id="img_1">
         </div>
         <div id="container2">
             <img src="https://cdn11.bigcommerce.com/s-e57be/product_images/uploaded_images/basket.png" alt="">
