--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdz-IV8A7_gvH3FnGN9AZP9cu50QSiYFgU-A&usqp=CAU" alt="" id="img_1">
         </div>
         <div id="container2">
-            <img src="https://cdn11.bigcommerce.com/s-e57be/product_images/uploaded_images/basket.png" alt="">
+            <img src="https://cdn11.bigcommerce.com/s-e57be/product_images/uploaded_images/basket.png" alt="" id="img_3">
             <div id="container3">
                 <p>My Basket</p>
-                <p>0 items</p>
+                <p id="p_Tag">0 items</p>
             </div>
         </div>
     </div>
