--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://www.bbassets.com/static/staticContent/bb_logo.png" alt="" id="img_2">
         <div id="container_1">
             <input type="text" placeholder="Search for Products.." id="input">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdz-IV8A7_gvH3FnGN9AZP9cu50QSiYFgU-A&usqp=CAU" alt="" id="img_1">
+            <img src="https://www.rawaf.shop/Resources/Icons/search.png" alt="" id="img_1">
         </div>
         <div id="container2">
             <img src="https://cdn11.bigcommerce.com/s-e57be/product_images/uploaded_images/basket.png" alt="" id="img_3">
@@ -30,6 +30,14 @@
             <option value="male">SHOP BY CATEGORY</option>
             <option value="female">Female</option>
         </select>
+        <div id="div1">
+            <img src="https://th.bing.com/th/id/OIP.8YRspwPX_eDPX023m7hkBgAAAA?pid=ImgDet&rs=1" alt="">
+            <p>OFFERS</p>
+        </div>
+        <div id="div2">
+            <img src="https://www.bing.com/images/blob?bcid=S-dlxQT7kSIE8bkKub8.3PYahQ2f.....0w" alt="">
+            <p>BB SPECIALTY</p>
+        </div>
     </div>
 </body>
 </html>
