--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/683b4b40e3.js" crossorigin="anonymous"></script>
     <link rel="icon" href="https://www.bbassets.com/static/v2514/images/favicon.ico?v=2514" type="image/x-icon">
    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/syle.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Online Grocery Shopping and Online Supermarket in India - bigbasket</title>
 </head>
 <body>
