--- a/index.html
+++ b/index.html
@@ -390,5 +390,5 @@
 <script src="./scripts/slideupper.js"></script>
 <script src="./scripts/sliderfooter.js" ></script>
 <script src="./scripts/login.js"></script>
-<script src="src/index.js"></script>
+<script src=".src/index.js"></script>
 
