--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/f3f741aedb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="icon" href="https://www.bbassets.com/static/v2514/images/favicon.ico?v=2514" type="image/x-icon">
-    <title> Best Online Grocery Shopping and Online Supermarket in India - bigbasket</title>
+    <title>Cart</title>
 </head>
 <body>
     <!-- nav bar div -->
