--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/683b4b40e3.js" crossorigin="anonymous"></script>
     <link rel="icon" href="https://www.bbassets.com/static/v2514/images/favicon.ico?v=2514" type="image/x-icon">
-    <title>Sign Up </title>
+    <title>Products</title>
     <link rel="stylesheet" href="./styles/products.css">
     <style>
 
